Put in relative paths for stored config parameters

--- a/confluent-sigma/sigma-streams/config/sigma-dns.properties
+++ b/confluent-sigma/sigma-streams/config/sigma-dns.properties
@@ -3,9 +3,9 @@ bootstrap.server=localhost:9092
 schema.registry=localhost:8081
 data.topic=dns
 output.topic=dns-detection
-#field.mapping.file=/Users/mpeacock/Development/KafkaSigma/kafka-sigma-streams/sample/config/splunk-zeek.yml
+#field.mapping.file=config/splunk-zeek.yml
 sigma.rules.topic=sigma-rules
 sigma.rule.filter.product=zeek
 sigma.rule.filter.service=dns
 #sigma.rule.filter.title=Possible DNS exfiltration Time
-#sigma.rule.filter.list=/Users/mpeacock/Development/KafkaSigma/kafka-sigma-streams/src/config/sigma_titles.txt
+#sigma.rule.filter.list=config/sigma_titles.txt
