--- a/confluent-sigma/sigma-streams/config/sigma-dns.properties
+++ b/confluent-sigma/sigma-streams/config/sigma-dns.properties
@@ -1,6 +1,15 @@
 application.id=dns-streams-app
 bootstrap.server=localhost:9092
 schema.registry=localhost:8081
+
+# For using SASL for something like Confluent Cloud uncomment and put in correct creds
+#
+# security.protocol=SASL_SSL
+# sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username='XXXXXXXXXXXXXX' password='XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX';
+# sasl.mechanism=PLAIN
+
+# Sigma specific config
+
 data.topic=dns
 output.topic=dns-detection
 #field.mapping.file=config/splunk-zeek.yml
