more work for tests case

--- a/confluent-sigma/sigma-streams/config/sigma.properties
+++ b/confluent-sigma/sigma-streams/config/sigma.properties
@@ -1,20 +1,25 @@
-application.id=dns-streams-app
+# Kafka Streams properties
+application.id=sigma-streams-app
 bootstrap.server=localhost:9092
 schema.registry=localhost:8081
+num.stream.threads=10
 
 # For using SASL for something like Confluent Cloud uncomment and put in correct creds
-#
+
 # security.protocol=SASL_SSL
 # sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username='XXXXXXXXXXXXXX' password='XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX';
 # sasl.mechanism=PLAIN
 
 # Sigma specific config
 
-data.topic=dns
-output.topic=dns-detection
+data.topic=sigma-test
+output.topic=sigma-detection
 #field.mapping.file=config/splunk-zeek.yml
 sigma.rules.topic=sigma-rules
-sigma.rule.filter.product=zeek
-sigma.rule.filter.service=dns
-#sigma.rule.filter.title=Possible DNS exfiltration Time
-#sigma.rule.filter.list=config/sigma_titles.txt
+
+# Optional parameters if you want to filter out the rules to be applied
+
+# sigma.rule.filter.product=zeek
+# sigma.rule.filter.service=dns
+# sigma.rule.filter.title=Possible DNS exfiltration Time
+# sigma.rule.filter.list=config/sigma_titles.txt
