Edited test rules to reflect what they were testing

--- a/confluent-sigma/sigma-streams/test/rules/1/single-field-match.yaml
+++ b/confluent-sigma/sigma-streams/test/rules/1/single-field-match.yaml
@@ -1,6 +1,6 @@
-title: Possible DNS exfiltration
+title: Single Field Match Test
 status: test
-description: 'This rule identifies possible data exfiltration through DNS'
+description: 'Single Field Match Test'
 author: Will LaForest
 logsource:
   product: zeek
