added sigma rule parsing exception

--- a/confluent-sigma/sigma-streams/config/rules/zeek/zeek_corelight_possible_data_collection_related_to_office_docs_and_email_archives_and_pdfs.yml
+++ b/confluent-sigma/sigma-streams/config/rules/zeek/zeek_corelight_possible_data_collection_related_to_office_docs_and_email_archives_and_pdfs.yml
@@ -22,7 +22,7 @@ detection:
       - '.pdf'
       - '.vss'
       - '.viz'
-  time_frame: 1m 
+  timeframe: 1m 
   condition: name_exists AND NOT exclusion AND selection | count(name) by id_orig_h > 30
 falsepositive:
   - 'Network or file backups.'
