--- a/confluent-sigma/sigma-streams/config/rules/zeek/zeek_corelight_smb_single_file_created_then_deleted_successively.yml
+++ b/confluent-sigma/sigma-streams/config/rules/zeek/zeek_corelight_smb_single_file_created_then_deleted_successively.yml
@@ -12,7 +12,7 @@ detection:
     name: '*'
   pre_filter:
     name: '<share_root>'
-  time_frame: 1m
+  timeframe: 1m
   condition: name_exists AND NOT pre_filter | count(times_modified) by name > 5
 fields:
   - ts
