--- a/confluent-sigma/sigma-streams/config/rules/zeek/zeek_corelight_possible_data_collection_over_smb.yml
+++ b/confluent-sigma/sigma-streams/config/rules/zeek/zeek_corelight_possible_data_collection_over_smb.yml
@@ -12,7 +12,7 @@ detection:
     name: '*'
   pre_filter:
     name: '<share_root>'
-  time_frame: 1m 
+  timeframe: 1m 
   condition: name_exists AND NOT pre_filter | count(name) by id_orig_h > 50
 falsepositive:
   - 'Mistakenly opening many files at one time. Should be rare'
