--- a/confluent-sigma/sigma-streams-ui/pom.xml
+++ b/confluent-sigma/sigma-streams-ui/pom.xml
@@ -68,6 +68,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.4.4</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework.boot</groupId>
@@ -82,11 +83,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
+            <version>2.4.4</version>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.4.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -122,6 +125,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>2.4.4</version>
         </dependency>
         <dependency>
             <groupId>io.confluent</groupId>
@@ -131,6 +135,7 @@
 
         <dependency>
             <groupId>org.webjars</groupId>
+            <version>0.46</version>
             <artifactId>webjars-locator-core</artifactId>
         </dependency>
         <dependency>
