Renamed splunk-zeek to zeek-mapping

--- a/confluent-sigma/sigma-streams/config/sigma.properties
+++ b/confluent-sigma/sigma-streams/config/sigma.properties
@@ -14,7 +14,7 @@ num.stream.threads=10
 
 data.topic=sigma-test
 output.topic=sigma-detection
-#field.mapping.file=config/splunk-zeek.yml
+field.mapping.file=config/zeek-mapping.yml
 sigma.rules.topic=sigma-rules
 
 # Optional parameters if you want to filter out the rules to be applied
