--- a/confluent-sigma/sigma-streams/src/main/resources/sigma-dns.properties
+++ b/confluent-sigma/sigma-streams/src/main/resources/sigma-dns.properties
@@ -10,6 +10,7 @@ sigma.rule.filter.product=zeek
 sigma.rule.filter.service=dns
 sigma.max.rules=10
 
-#field.mapping.file=/Users/mpeacock/Development/KafkaSigma/kafka-sigma-streams/sample/config/splunk-zeek.yml
+#example placeholders
+#field.mapping.file=/Users/mpeacock/Development/KafkaSigma/kafka-sigma-streams/sample/config/zeek-mapping.yml
 #sigma.rule.filter.title=Possible DNS exfiltration Time
 #sigma.rule.filter.list=/Users/mpeacock/Development/KafkaSigma/kafka-sigma-streams/src/config/sigma_titles.txt
