- Renamed splunk-zeek to zeek-mapping - Added confluent_sigma backend

--- a/confluent-sigma/sigma-streams/config/zeek-mapping.yml
+++ b/confluent-sigma/sigma-streams/config/zeek-mapping.yml
@@ -4,6 +4,7 @@ backends:
   - splunk
   - splunkxml
   - corelight_splunk
+  - confluent_sigma
 logsources:
   zeek-category-accounting:
     category: accounting
