Updated to remove the -dns on properties

--- a/confluent-sigma/sigma-streams/Dockerfile
+++ b/confluent-sigma/sigma-streams/Dockerfile
@@ -4,4 +4,4 @@
 FROM openjdk:11
 COPY ./target/sigma-streams-1.2.0-fat.jar /tmp
 WORKDIR /tmp
-CMD java -cp sigma-streams-1.2.0-fat.jar io.confluent.sigmarules.SigmaStreamsApp -c /tmp/config/sigma-dns.properties
+CMD java -cp sigma-streams-1.2.0-fat.jar io.confluent.sigmarules.SigmaStreamsApp -c /tmp/config/sigma.properties
