--- a/confluent-sigma/sigma-streams/pom.xml
+++ b/confluent-sigma/sigma-streams/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>confluent-sigma</artifactId>
         <groupId>io.confluent</groupId>
-        <version>1.0</version>
+        <version>1.2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -95,7 +95,7 @@
         <dependency>
             <groupId>io.confluent</groupId>
             <artifactId>sigma-parser</artifactId>
-            <version>1.0</version>
+            <version>1.2.0</version>
             <scope>compile</scope>
         </dependency>
 
@@ -131,6 +131,25 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <inherited>false</inherited>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <appendAssemblyId>false</appendAssemblyId>
+                            <descriptors>
+                                <descriptor>src/main/assembly/zip.xml</descriptor>
+                            </descriptors>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
