add feature to return when the first rule matches

--- a/confluent-sigma/sigma-streams/src/main/resources/sigma-dns.properties
+++ b/confluent-sigma/sigma-streams/src/main/resources/sigma-dns.properties
@@ -8,7 +8,10 @@ output.topic=dns-detection
 sigma.rules.topic=sigma-rules
 sigma.rule.filter.product=zeek
 sigma.rule.filter.service=dns
-sigma.max.rules=10
+
+# return results when a single rule matches
+# only valid for non-aggregate rules
+sigma.rule.first.match=false
 
 #example placeholders
 #field.mapping.file=/Users/mpeacock/Development/KafkaSigma/kafka-sigma-streams/sample/config/zeek-mapping.yml
