removed duplicate classes; added support for kafka output topic

--- a/confluent-sigma/sigma-streams-ui/config/application.properties
+++ b/confluent-sigma/sigma-streams-ui/config/application.properties
@@ -1,7 +1,9 @@
 # Sample configuration properties for sigma-streams ui
 
-kafka.bootstrapAddress=localhost:9092
-kafka.schemaRegistry=localhost:8081
+bootstrap.server=localhost:9092
+schema.registry=localhost:8081
+
+sigma.rules.topic=sigma-rules
 
 confluent.regex.applicationID=regex-application2
 confluent.regex.inputTopic=splunk-s2s-events
