--- a/confluent-sigma/sigma-streams-ui/src/main/resources/application.properties
+++ b/confluent-sigma/sigma-streams-ui/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 spring.web.resources.static-locations=classpath:/static
 
-kafka.bootstrapAddress=localhost:9092
-kafka.schemaRegistry=localhost:8081
+bootstrap.server=localhost:9092
+schema.registry=localhost:8081
+
+# For using SASL for something like Confluent Cloud uncomment and put in correct creds
+#
+#security.protocol=SASL_SSL
+#sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username='XXX' password='xxxxxxx';
+#sasl.mechanism=PLAIN
+
+sigma.rules.topic=sigma-rules
 
 confluent.regex.applicationID=regex-application2
 confluent.regex.inputTopic=splunk-s2s-events
