--- a/confluent-sigma/pom.xml
+++ b/confluent-sigma/pom.xml
@@ -19,6 +19,8 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <jackson.version>2.14.0-rc1</jackson.version>
+        <kafka.version>3.3.1</kafka.version>
+        <dockerfile-maven-version>1.4.13</dockerfile-maven-version>
     </properties>
 
     <dependencies>
