--- a/confluent-sigma/pom.xml
+++ b/confluent-sigma/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.confluent</groupId>
     <artifactId>confluent-sigma</artifactId>
-    <version>1.2.1</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
 
     <modules>
