--- a/confluent-sigma/sigma-parser/pom.xml
+++ b/confluent-sigma/sigma-parser/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>confluent-sigma</artifactId>
     <groupId>io.confluent</groupId>
-    <version>1.2.1</version>
+    <version>${revision}</version>
   </parent>
 
 
