--- a/confluent-sigma/sigma-streams-ui/pom.xml
+++ b/confluent-sigma/sigma-streams-ui/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>confluent-sigma</artifactId>
         <groupId>io.confluent</groupId>
-        <version>1.2.1</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
