Adding a new demo properties file and normalizing the other property files.

--- a/confluent-sigma/sigma-streams/config/ccloud.properties
+++ b/confluent-sigma/sigma-streams/config/ccloud.properties
@@ -1,9 +1,11 @@
+# Kafka Streams properties
+
 application.id=dns-streams-app
 bootstrap.server=pkc-2396y.us-east-1.aws.confluent.cloud:9092
 schema.registry=https://psrc-yg906.us-east-2.aws.confluent.cloud
 
 # For using SASL for something like Confluent Cloud uncomment and put in correct creds
-#
+
 security.protocol=SASL_SSL
 sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username='XXX' password='xxxxxxx';
 sasl.mechanism=PLAIN
