--- a/confluent-sigma/sigma-streams/config/sigma-docker-demo.properties
+++ b/confluent-sigma/sigma-streams/config/sigma-docker-demo.properties
@@ -1,15 +1,13 @@
 # Kafka Streams properties
-
 application.id=sigma-streams-app
 bootstrap.server=localhost:9092
 schema.registry=localhost:8081
 num.stream.threads=10
 
 # Sigma specific config
-
-data.topic=sigma-test
-output.topic=sigma-detection
-field.mapping.file=config/zeek-mapping.yml
+data.topic=dns
+output.topic=dns-detection
+field.mapping.file=/tmp/config/zeek-mapping.yml
 sigma.rules.topic=sigma-rules
 
 # Optional parameters if you want to filter out the rules to be applied
