switched image to an entry point

--- a/confluent-sigma/sigma-streams/Dockerfile
+++ b/confluent-sigma/sigma-streams/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:11
+FROM --platform=$BUILDPLATFORM openjdk:11
 COPY ./target/sigma-streams-1.3.0-fat.jar /tmp
 WORKDIR /tmp
-CMD java -cp sigma-streams-1.3.0-fat.jar io.confluent.sigmarules.SigmaStreamsApp -c /tmp/config/sigma.properties
+ENTRYPOINT java -cp sigma-streams-1.3.0-fat.jar io.confluent.sigmarules.SigmaStreamsApp
