--- a/confluent-sigma/docker-compose.yml
+++ b/confluent-sigma/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'broker:29092'
 
   connect:
-    build: kafka-connect
+    image: cnfldemos/cp-server-connect-datagen:0.5.3-7.1.0
     hostname: connect
     container_name: connect
     user: root
@@ -78,15 +78,12 @@ services:
       CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
       CONNECT_OFFSET_FLUSH_INTERVAL_MS: 10000
       CONNECT_KEY_CONVERTER: org.apache.kafka.connect.storage.StringConverter
-      # CONNECT_KEY_CONVERTER: io.confluent.connect.avro.AvroConverter
       CONNECT_VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
       CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry:8081
       CONNECT_INTERNAL_KEY_CONVERTER: "org.apache.kafka.connect.json.JsonConverter"
       CONNECT_INTERNAL_VALUE_CONVERTER: "org.apache.kafka.connect.json.JsonConverter"
       CONNECT_PLUGIN_PATH: "/usr/share/java,/usr/share/confluent-hub-components"
       CONNECT_LOG4J_LOGGERS: org.apache.zookeeper=ERROR,org.I0Itec.zkclient=ERROR,org.reflections=ERROR
-    volumes:
-      - ./spooldir/:/var/spooldir/
 
   control-center:
     image: confluentinc/cp-enterprise-control-center:latest
@@ -143,24 +140,9 @@ services:
     volumes:
       - ./zeek:/tmp/down
     command: gdown.sh 1Mo2cjWx8QFU3oekRLdaeWZztWa0VwF3e zeek_streamer.pcap
-    
-  # See https://github.com/berthayes/zeek-tcpreplay-kafka
-  zeek-streamer:
-    image: wlaforest/zeek-tcpreplay-kafka:latest
-    container_name: zeek-streamer
-    depends_on:
-      - zeek-download
-    hostname: zeek-streamer
-    entrypoint: /init_dummy.sh
-    volumes:
-      - ./scripts/init_dummy.sh:/init_dummy.sh
-      - ./pcaps:/pcaps
-      - ./zeek:/usr/local/zeek/share/zeek/site
-    cap_add:
-      - NET_ADMIN
 
   confluent-sigma-streams:
-    image: confluentinc/confluent-sigma:latest
+    image: confluentinc/confluent-sigma:1.3.0
     container_name: confluent-sigma-streams
     depends_on:
       - broker
@@ -179,23 +161,23 @@ services:
         java -cp sigma-streams-1.3.0-fat.jar io.confluent.sigmarules.SigmaStreamsApp -c /tmp/config/sigma-dns.properties
         sleep infinity
 
-  confluent-sigma-regex-ui:
-    image: confluentinc/confluent-sigma-regex-ui:latest
-    container_name: confluent-sigma-regex-ui
-    depends_on:
-      - broker
-      - connect
-      - control-center
-      - ksqldb-server
-    hostname: confluent-sigma-regex-ui
-    ports:
-      - 8080:8080
-    environment:
-      kafka_bootstrapAddress: 'broker:29092'
-      kafka_schemaRegistry: 'http://schema-registry:8081'
-      kafka_sigma_rules_topic: 'sigma-rules'
-      confluent_regex_applicationID: 'regex-application'
-      confluent_regex_inputTopic: 'splunk-s2s-events'
-      confluent_regex_ruleTopic: 'regex-rules'
-      confluent_regex_filterField: 'sourcetype'
-      confluent_regex_regexField: 'event'
+#  confluent-sigma-regex-ui:
+#    image: confluentinc/confluent-sigma-regex-ui:latest
+#    container_name: confluent-sigma-regex-ui
+#    depends_on:
+#      - broker
+#      - connect
+#      - control-center
+#      - ksqldb-server
+#    hostname: confluent-sigma-regex-ui
+#    ports:
+#      - 8080:8080
+#    environment:
+#      kafka_bootstrapAddress: 'broker:29092'
+#      kafka_schemaRegistry: 'http://schema-registry:8081'
+#      kafka_sigma_rules_topic: 'sigma-rules'
+#      confluent_regex_applicationID: 'regex-application'
+#      confluent_regex_inputTopic: 'splunk-s2s-events'
+#      confluent_regex_ruleTopic: 'regex-rules'
+#      confluent_regex_filterField: 'sourcetype'
+#      confluent_regex_regexField: 'event'
