--- a/confluent-sigma/demo/config/sigma.properties
+++ b/confluent-sigma/demo/config/sigma.properties
@@ -3,7 +3,7 @@ bootstrap.server=broker:29092
 schema.registry=http://schema-registry:8081
 data.topic=dns
 output.topic=dns-detection
-field.mapping.file=/tmp/config/splunk-zeek.yml
+field.mapping.file=/tmp/config/zeek.yml
 sigma.rules.topic=sigma-rules
 sigma.rule.filter.product=zeek
 sigma.rule.filter.service=dns
