--- a/confluent-sigma/pom.xml
+++ b/confluent-sigma/pom.xml
@@ -18,7 +18,7 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <jackson.version>2.14.0-rc1</jackson.version>
+        <jackson.version>2.14.1</jackson.version>
     </properties>
 
     <dependencies>
