updated spring boot to handle docker env variables

--- a/confluent-sigma/sigma-streams/Dockerfile
+++ b/confluent-sigma/sigma-streams/Dockerfile
@@ -4,4 +4,4 @@
 FROM openjdk:11
 COPY ./target/sigma-streams-1.2.1-fat.jar /tmp
 WORKDIR /tmp
-CMD java -cp sigma-streams-1.2.1-fat.jar io.confluent.sigmarules.SigmaStreamsApp -c /tmp/config/sigma.properties
+CMD java -cp sigma-streams-1.2.1-fat.jar io.confluent.sigmarules.Application -c /tmp/config/sigma.properties
